bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: intelligent-cognitive-alarm-platform-main
    labels:
        com.docker.compose.project: intelligent-cognitive-alarm-platform-main
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: intelligent-cognitive-alarm-platform-main
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: intelligent-cognitive-alarm-platform-main
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: db
                  image: postgres:16-alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d
                      mountPath: /docker-entrypoint-initdb.d
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-db-data
                - name: docker-entrypoint-initdb-d
                  hostPath:
                    path: C:\Users\janar\Downloads\Intelligent-Cognitive-Alarm-Platform-main\Intelligent-Cognitive-Alarm-Platform-main\sql
