bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: intelligent-cognitive-alarm-platform-main
    labels:
        com.docker.compose.project: intelligent-cognitive-alarm-platform-main
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: intelligent-cognitive-alarm-platform-main
        com.docker.compose.service: api
    ports:
        - name: api-4000
          port: 4000
          protocol: TCP
          targetPort: api-4000

# check if there is at least one published port
